--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,18 @@ services:
       PORT: 8001
     depends_on:
       - "postgres"
+
+  notification:
+    build: ./cmd/notification
+    ports:
+      - "8002:8002"
+    environment:
+      PORT: 8002
+      GOOGLE_APPLICATION_CREDENTIALS: /app/credential.json
+    volumes:
+      - ./credential.json:/app/credential.json
+    depends_on:
+      - "redis"
   postgres:
       image: postgres:12.10
       restart: always
@@ -22,3 +34,7 @@ services:
         - '5432:5432'
       volumes:
         - ./db/postgres-data:/var/lib/postgresql/data
+  redis:
+    image: redis:7.0
+    ports:
+      - '6379:6379'
